--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   overflow: hidden;
   font-family: 'DM Sans', sans-serif;
-
+  position: relative;
 
 }
 
@@ -25,6 +25,10 @@ canvas {
   padding: 5rem;
 
 
+}
+
+.outerContainer {
+  display: none;
 }
 
 #slider1 {
@@ -72,6 +76,142 @@ h1 {
   border: none;
 }
 
+
+
+
+#uniqueslider.rs-container {
+  border-color: none;
+  cursor: pointer;
+
+}
+
+#uniqueslider.rs-range-color {
+  background: linear-gradient(90deg, #3ABECB 0%, #21638a 100%);
+}
+
+#uniqueslider .rs-path-color {
+  background-color: #21638a;
+}
+
+#uniqueslider .rs-handle {
+  background: radial-gradient(ellipse at center, #D1D1D1, 0%, #D1D1D1 34%, #D1D1D1 100%);
+  cursor: pointer;
+}
+
+#uniqueslider .rs-tooltip-text {
+  color: #9DE5EC;
+}
+
+#uniqueslider .rs-bg-color {
+  background-color: white;
+}
+
+.rs-border {
+  border: none;
+}
+
+
+
+#uniqueslider1.rs-container {
+  border-color: none;
+  cursor: pointer;
+
+}
+
+#uniqueslider1.rs-range-color {
+  background: linear-gradient(90deg, #9DE5EC 0%, #9DE5EC 100%);
+}
+
+#uniqueslider1 .rs-path-color {
+  background-color: #21638a;
+}
+
+#uniqueslider1 .rs-handle {
+  background: radial-gradient(ellipse at center, #D1D1D1, 0%, #D1D1D1 34%, #D1D1D1 100%);
+  cursor: pointer;
+}
+
+#uniqueslider1 .rs-tooltip-text {
+  color: #9DE5EC;
+}
+
+#uniqueslider1 .rs-bg-color {
+  background-color: white;
+}
+
+.rs-border {
+  border: none;
+}
+
+
+#uniqueslider2.rs-container {
+  border-color: none;
+  cursor: pointer;
+
+}
+
+#uniqueslider2.rs-range-color {
+  background: linear-gradient(90deg, #9DE5EC 0%, #9DE5EC 100%);
+}
+
+#uniqueslider2 .rs-path-color {
+  background-color: #21638a;
+}
+
+#uniqueslider2 .rs-handle {
+  background: radial-gradient(ellipse at center, #D1D1D1, 0%, #D1D1D1 34%, #D1D1D1 100%);
+  cursor: pointer;
+}
+
+#uniqueslider2 .rs-tooltip-text {
+  color: #9DE5EC;
+}
+
+#uniqueslider2 .rs-bg-color {
+  background-color: white;
+}
+
+.rs-border {
+  border: none;
+}
+
+
+
+
+#uniqueslider3.rs-container {
+  border-color: none;
+  cursor: pointer;
+
+}
+
+#uniqueslider3.rs-range-color {
+  background: linear-gradient(90deg, #9DE5EC 0%, #9DE5EC 100%);
+}
+
+#uniqueslider3 .rs-path-color {
+  background-color: #21638a;
+}
+
+#uniqueslider3 .rs-handle {
+  background: radial-gradient(ellipse at center, #D1D1D1, 0%, #D1D1D1 34%, #D1D1D1 100%);
+  cursor: pointer;
+}
+
+#uniqueslider3 .rs-tooltip-text {
+  color: #9DE5EC;
+}
+
+#uniqueslider3 .rs-bg-color {
+  background-color: white;
+}
+
+.rs-border {
+  border: none;
+}
+
+
+
+
 #slider2 {
 
   transform: translate(-50%, -50%);
@@ -91,7 +231,7 @@ h1 {
 
 .rs-tooltip-text {
 
-  font-size: 25px;
+  font-size: 20px;
 
 }
 
@@ -101,6 +241,9 @@ h1 {
   font-size: 200px;
 }
 
+#uniqueslider1 {
+  display: none;
+}
 
 #slider3 {
   /* position: absolute;
@@ -152,7 +295,7 @@ h1 {
   color: white;
   z-index: 2;
   display: flex;
-  gap:0.5rem;
+  gap: 0.5rem;
   text-align: center;
   justify-content: center;
   align-items: center;
@@ -180,7 +323,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  display: none;
+  display: block;
 
 
 }
@@ -195,6 +338,7 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+
 
 
 }
@@ -274,105 +418,573 @@ button {
   width: 100%;
   /* padding: 2rem; */
   position: absolute;
-  top:5%;
+  top: 5%;
   right: 0%;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
- text-transform: uppercase;
- font-size: larger;
+  text-transform: uppercase;
+  font-size: larger;
 }
 
-#moreInfo  {
+#moreInfo {
   width: 100%;
 
   position: absolute;
-   top:90%;
+  top: 85%;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
-#circle{
+
+#circle {
   width: 100%;
 
   position: absolute;
-   top:80%;
+  top: 80%;
   color: white;
   display: none;
   display: flex;
- 
+
 }
-#circle1{
+
+#circle1 {
   width: 43px;
   height: 43px;
   border-radius: 50%;
   background-color: white;
- 
+
 }
-@media screen and (max-width: 600px) {
+
+.displaynoneforlargerscreen {
+  display: none;
+}
+
+.valueContainer {
+  display: none;
+}
+
+#uniqueslider2,
+#uniqueslider3 {
+  display: none;
+}
+
+@media screen and (max-width: 425px) {
+  canvas {
+    width: 390px;
+    height: 844px;
+  }
+
   .sliderContainer {
     display: none;
   }
-  /* #circle{
-    display: block;
-  } */
-  
-  .picker {
-    position: absolute;
-    top: 50%;
-    left:20%;
-    transform: translateY(-50%);
-    transform: rotate(-90deg);
-    text-align: center;
-  
+
+  #text-container {
+    top: 1%;
   }
+
+  .btn button {
+    top: 40px;
+    left: 315px;
+    width: 35px;
+    height: 35px;
+    color: black;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    opacity: 1;
+  }
+
+  .i-button {
+    font-size: medium;
+  }
+
   #moreInfo {
-  text-align: justify;
-  /* font-size:1rem; */
-  /* font-size: 0.8rem; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top:88%;
+    display: none;
+  }
+
+  .displayN {
+    top: 158px;
+    left: 21px;
+    width: 348px;
+    height: 529px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border-radius: 15px;
+    opacity: 1;
+    box-sizing: border-box;
+
+  }
+
+  #content {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+  }
+
+  #innerContent {
+    width: 90%;
+    padding-left: 21px;
+    padding-right: 21px;
+    color: black;
+
+  }
+
+  .displayN {
+    /* display: flex; */
+    top: 158px;
+    width: 348px;
+    height: 529px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border-radius: 15px;
+    opacity: 1;
+    color: black;
+    /* display: block; */
+
+  }
+
+  .displaynoneformobile {
+    display: none;
+  }
+
+  .displayns {
+    color: black;
+
+  }
+
+  .displaynoneforlargerscreen {
+    display: block;
+
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .css-slider {
+    width: 309px;
+    height: 396px;
+    position: relative;
+    overflow: hidden;
+    /* background: #120103; */
+    color: #fff;
+    text-align: center;
+    border-radius: 2rem;
+    /* transform-origin: bottom center;
+    transform: rotateY(-25deg); 
+    transition: left 0s .75s, transform 0.85s;  */
+    /* display: flex;
+    gap:5rem; */
+  }
+
+  label {
+    cursor: pointer;
+    display: inline-block;
+  }
+
+  .slide {
+    height: 100%;
+    width: 100%;
+    max-width: 1920px;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    z-index: 1;
+    text-align: center;
+    border-radius: 2rem;
+    /* padding: 8=em 0px; */
+    background-color: #120103;
+    background-position: 50% 50%;
+    background-size: cover;
+    -webkit-transition: left 0s .75s;
+    transition: left 0s .75s;
+    transform-origin: 50% 120.7%;
+    /* transform:  rotate(-360deg);Add rotate transform */
+    transition: left 0s .75s; 
  
-  flex-wrap: wrap;
+  }
+ 
 
-}
+  [id^="slide"]:checked+.slide {
+    left: 0;
+    z-index: 100;
 
-.i-button{
-  right: 0%;
-  display: none;
-}
-.colorPicker {
- height: 2px;
-}
-#content {
-  width: 100vw;
-  height: 100vh;
+    -webkit-transition: left .65s ease-out;
+    transition: transfrom left .65s ease-out;
+    transform: rotate(0deg); /* Rotate back to 0deg on slide change */
+    
+    transition: transform 0.65s ease-out, left 0s .75s;
+  }
+
+  .slide-one {
+    /* background: rgb(2, 0, 36); */
+    /* background: radial-gradient(circle, rgba(2, 0, 36, 1) 0%, rgba(166, 170, 73, 0.9556197478991597) 16%, rgba(77, 162, 180, 0.9472163865546218) 100%); */
+    /* position: absolute; */
+    /* background-image: url("nasa-rTZW4f02zY8-unsplash.jpg"); */
+	  /* background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover; */
+	  height: 100%;
+    background-image: linear-gradient(
+      to bottom,
+      rgba(77, 238, 176, 0.5),
+      rgba(30, 72, 150, 0.5)
+    ), url("nasa-rTZW4f02zY8-unsplash.jpg");
+  }
+
+  .slide-two {
+    /* background: rgb(2, 0, 36);
+    background: radial-gradient(circle, rgba(2, 0, 36, 1) 0%, rgba(121, 9, 9, 1) 35%, rgba(53, 130, 150, 0.9752275910364145) 100%); */
+    background-image: linear-gradient(
+      to bottom,
+      rgba(77, 238, 176, 0.5),
+      rgba(30, 72, 150, 0.5)
+    ), url("pexels-pixabay-462162.jpg");
+  }
+
+  .slide-three {
+    /* background: rgb(2, 0, 36);
+    background: radial-gradient(circle, rgba(2, 0, 36, 1) 0%, rgba(73, 170, 152, 0.9556197478991597) 16%, rgba(77, 162, 180, 0.9472163865546218) 100%); */
+    background-image: linear-gradient(
+      to bottom,
+      rgba(0, 12, 6, 0.8),
+      rgba(4, 7, 14, 0.5)
+    ), url("pexels-vidal-balielo-jr-1250655.jpg");
+  }
+
+  
+header {
   position: absolute;
-  top:5%;
-  left:10%;
-  color: white;
+  bottom: 0;
+  left: 0;
+  z-index: 900;
+  width: 100%;
+}
+
+header label {
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  margin: 20px 10px;
+}
+
+nav {
+  position: absolute;
+  top: 50%;
+  margin-top: -49px;
+  z-index: 900;
+  width: 100%;
+}
+
+nav label {
+  font-size: 20px;
+}
+
+header label:hover {
+  background: #2e353b;
+}
+
+.prev {
+  position: absolute;
+  left: 10px;
+}
+
+.next {
+  position: absolute;
+  right: 10px;
+}
+
+.slide .prev,
+.slide .next {
+  opacity: 0;
+}
+
+[id^="slide"]:checked+.slide .prev,
+[id^="slide"]:checked+.slide .next {
+  opacity: 1;
+  -webkit-transition: all .5s .5s;
+  transition: all .5s .5s;
+}
+
+
+.slide h1 {
+  opacity: 0;
+  -webkit-transform: translateY(100%);
+
+  -ms-transform: translateY(100%);
+  transform: translateY(100%);
+  -webkit-transition: -webkit-transform .5s .5s, opacity .5s;
+  transition: transform .5s .5s, opacity .5s;
+}
+
+[id^="slide"]:checked+.slide h1 {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+  -ms-transform: translateY(0);
+  transform: translateY(0);
+  -webkit-transition: all .5s .5s;
+  transition: all .5s .5s;
+}
+
+.imageContainer {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  height: 100%;
+  gap: 1rem;
+  padding: 1rem;
+  
+
+}
+
+.block {
+  height: 40%;
+}
+
+.imgblock {
+  border-radius: 5rem;
+}
+
+img {
+  border-radius: 1rem;
+}
+
+/* scrollable ball */
+#container {
+  display: block;
+  width: 100%;
+  height: 844px;
+  position: absolute;
+  /* background-color: #333; */
+  z-index: 1;
   display: flex;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
+  overflow: hidden;
+  border-radius: 1px;
+  touch-action: none;
+  /* left:-42%; */
+}
+
+#item {
+  width: 42.2px;
+  height: 42.2px;
+  background-color: white;
+  border: 10px solid hsla(0, 6%, 76%, 0.8);
+
+  box-shadow: inset 0px 0px 40px 40px white;
+  border-radius: 50%;
+  touch-action: none;
+  user-select: none;
+}
+
+#item:active {
+  background-color: rgba(168, 218, 220, 1.00);
+  cursor: pointer;
+
+}
+
+/* #item:hover {
+    cursor: pointer;
+    border-width: 20px;
+  } */
+
+.valueContainer {
+
+  position: absolute;
+  display: block;
+  top: 427px;
+  left: 41px;
+  width: 309px;
+  height: 248px;
+  /* UI Properties */
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border-radius: 15px;
+  opacity: 1;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  z-index: 2;
   display: none;
 
+}
+
+
+
+.sliderBlock1 {
+  display: flex;
+  padding-top: 20px;
+  padding-left: 25px;
+  gap: 1rem;
 
 }
-#innerContent {
 
-  width: 80%;
-  height: 80%;
-  /* background-color: #f00; */
+.sblock1 {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  width: 109px;
+  height: 100%;
+
+}
+
+.constantValues {
+  top: 572px;
+  left: 236px;
+  width: 114px;
+  height: 50px;
+  /* UI Properties */
+  background: white 0% 0% no-repeat padding-box;
+  border-radius: 50px 0px 0px 50px;
+  opacity: 1;
+  display: flex;
   align-items: center;
 
 
 }
+
+.constantValues::before {
+  content: "";
+  position: absolute;
+  width: 0%;
+  background-color: #e6e6e6;
+  z-index: -1;
+  transition: width 1.0s ease-in-out;
 }
+
+.constantValues.clicked::before {
+  width: 100%;
+}
+
+
+.constantcircle {
+  top: 580px;
+  left: 245px;
+  width: 35px;
+  height: 35px;
+  /* UI Properties */
+  background: #3ABECB 0% 0% no-repeat padding-box;
+  opacity: 1;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.1rem;
+  margin-left: 0.5rem;
+}
+
+.constantcircle1 {
+  top: 580px;
+  left: 245px;
+  width: 30px;
+  height: 30px;
+  /* UI Properties */
+  background: white 0% 0% no-repeat padding-box;
+  opacity: 1;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+
+
+@keyframes fill {
+  0% {
+    background-size: 0% 100%;
+    background-color: transparent;
+  }
+
+  100% {
+    background-size: 100% 100%;
+    /* end with 100% width and 100% height */
+    background-color: #DFF3F5;
+    background-position: 100% 0%;
+    transition: background-color 0.2s ease-in-out;
+
+  }
+}
+
+
+.constantValues.clicked {
+  animation-name: fill;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+
+}
+
+.picker1 {
+  position: absolute;
+  margin-top: 1rem;
+  transform: translateY(-50%);
+  /* transform: rotate(-90deg); */
+  text-align: center;
+  margin-left: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.colorPicker1 {
+  /* position: absolute;
+  top: 40%;
+  left: 80%;
+  transform: translateY(-50%);
+  transform: rotate(-90deg);
+  text-align: center;
+  background-color: yellow; */
+  width: 250px;
+
+}
+
+#colorPicker1 {
+  width: 100%;
+  height: 10px;
+  background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
+  outline: none;
+  border-radius: 2rem;
+  -webkit-appearance: none;
+
+}
+
+#colorPicker1::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 14px;
+  height: 14px;
+  background: white;
+  border-radius: 50%;
+  border: 1px solid white;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+
+
+}
+
+#alpha,
+#beta,
+#gamma {
+  margin-left: 0.5rem;
+}
+}
+
+
+
+/* .filling-button{
+    
+  background: linear-gradient(to right, rgb(93, 103, 167) 50%, white 50%);
+  background-size:200% 100%;
+  background-position: left bottom;
+  transition: all .10s ease;
+  } */
+/* .filling-button:hover{
+    background-position: right bottom;
+  } */
+
+
+
+  
