--- a/style.css
+++ b/style.css
@@ -970,21 +970,7 @@ img {
 #gamma {
   margin-left: 0.5rem;
 }
+#curious{
+  display:none
 }
-
-
-
-/* .filling-button{
-    
-  background: linear-gradient(to right, rgb(93, 103, 167) 50%, white 50%);
-  background-size:200% 100%;
-  background-position: left bottom;
-  transition: all .10s ease;
-  } */
-/* .filling-button:hover{
-    background-position: right bottom;
-  } */
-
-
-
-  
+}
