--- a/style.css
+++ b/style.css
@@ -7,7 +7,26 @@ body {
   position: relative;
 
 }
+/* #forwardBackword{
+  position: absolute;
+  left: 20%;
+} */
+.moreInfoalphaBetaphone{
+  display: none;
+}
+#x{
+  display: none;
+}
 
+#icon{
+  display: none;
+}
+.buttons{
+  position:absolute;
+  display: flex;
+ gap:1rem;
+  z-index:5 ;
+}
 canvas {
   height: 100vh !important;
   width: 100vw !important;
@@ -428,15 +447,58 @@ button {
   font-size: larger;
 }
 
-#moreInfo {
+#moreInfo1 {
   width: 100%;
 
   position: absolute;
   top: 85%;
+  display: flex;
+  gap:1rem;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#moreInfo{
+  display: flex;
+  position: relative;
+  top: 12px;
+}
+.moreInfoalphaBeta{
+  position:absolute;
+  width: 95%;
+  top:63%;
+  height: 15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left:5%;
+  font-size: 14px;
+  font-weight:100;
+  z-index: 15;
+  
+
+}
+.moreInfoalphaBetaCircle{
+     width: 100%;
+    height: 100%;
+    border-radius: 6px;
+    /* background-color: #000000; */
+    border: 1px solid rgba(255, 255, 255, 0.274);
+    box-shadow: 0 0 15px 2px rgb(255 255 255 / 8%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* font-family: 'FontAwesome'; */
+    flex-direction: column;
+    padding: 15px;
+    text-align: justify;
+    color: #b1aeae;
+    gap: 1rem;
+    background: rgba(255, 255, 255, 0);
+    backdrop-filter: blur(8px);
+    z-index: 15;
 }
 
 #circle {
@@ -458,9 +520,9 @@ button {
 
 }
 
-.displaynoneforlargerscreen {
+/* .displaynoneforlargerscreen {
   display: none;
-}
+} */
 
 .valueContainer {
   display: none;
@@ -469,6 +531,267 @@ button {
 #uniqueslider2,
 #uniqueslider3 {
   display: none;
+}
+
+
+.displayN {
+  top: 158px;
+  left: 21px;
+  width: 348px;
+  height: 529px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border-radius: 15px;
+  opacity: 1;
+  box-sizing: border-box;
+
+}
+
+#content {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+
+#innerContent {
+  width: 100%;
+  padding-left: 21px;
+  padding-right: 21px;
+  color: black;
+
+}
+
+.displayN {
+  display: flex;
+  top: 158px;
+  width: 494px;
+  height: 529px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border-radius: 15px;
+  opacity: 1;
+  color: black;
+  justify-content: center;
+  /* display: block; */
+
+}
+
+.displaynoneformobile {
+  display: none;
+}
+
+.displayns {
+  color: black;
+
+}
+
+.displaynoneforlargerscreen {
+  display: block;
+
+}
+
+img {
+  width: 100%;
+  height: 100%;
+}
+
+.css-slider {
+  width: 435px;
+  height: 396px;
+  position: relative;
+  overflow: hidden;
+  /* background: #120103; */
+  color: #fff;
+  text-align: center;
+  border-radius: 2rem;
+  /* transform-origin: bottom center;
+  transform: rotateY(-25deg); 
+  transition: left 0s .75s, transform 0.85s;  */
+  /* display: flex;
+  gap:5rem; */
+}
+
+label {
+  cursor: pointer;
+  display: inline-block;
+}
+
+.slide {
+  height: 100%;
+  width: 100%;
+  max-width: 1920px;
+  position: absolute;
+  top: 0;
+  left: 100%;
+  z-index: 1;
+  text-align: center;
+  border-radius: 2rem;
+  /* padding: 8=em 0px; */
+  background-color: #120103;
+  background-position: 50% 50%;
+  background-size: cover;
+  -webkit-transition: left 0s .75s;
+  transition: left 0s .75s;
+  transform-origin: 50% 120.7%;
+  /* transform:  rotate(-360deg);Add rotate transform */
+  transition: left 0s .75s; 
+
+}
+
+
+[id^="slide"]:checked+.slide {
+  left: 0;
+  z-index: 100;
+
+  -webkit-transition: left .65s ease-out;
+  transition: transfrom left .65s ease-out;
+  transform: rotate(0deg); /* Rotate back to 0deg on slide change */
+  
+  transition: transform 0.65s ease-out, left 0s .75s;
+}
+
+.slide-one {
+  /* background: rgb(2, 0, 36); */
+  /* background: radial-gradient(circle, rgba(2, 0, 36, 1) 0%, rgba(166, 170, 73, 0.9556197478991597) 16%, rgba(77, 162, 180, 0.9472163865546218) 100%); */
+  /* position: absolute; */
+  /* background-image: url("nasa-rTZW4f02zY8-unsplash.jpg"); */
+  /* background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; */
+  height: 100%;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(77, 238, 176, 0.5),
+    rgba(30, 72, 150, 0.5)
+  ), url("nasa-rTZW4f02zY8-unsplash.jpg");
+}
+
+.slide-two {
+  /* background: rgb(2, 0, 36);
+  background: radial-gradient(circle, rgba(2, 0, 36, 1) 0%, rgba(121, 9, 9, 1) 35%, rgba(53, 130, 150, 0.9752275910364145) 100%); */
+  background-image: linear-gradient(
+    to bottom,
+    rgba(77, 238, 176, 0.5),
+    rgba(30, 72, 150, 0.5)
+  ), url("pexels-pixabay-462162.jpg");
+}
+
+
+.slide-three {
+  /* background: rgb(2, 0, 36);
+  background: radial-gradient(circle, rgba(2, 0, 36, 1) 0%, rgba(73, 170, 152, 0.9556197478991597) 16%, rgba(77, 162, 180, 0.9472163865546218) 100%); */
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 12, 6, 0.8),
+    rgba(4, 7, 14, 0.5)
+  ), url("pexels-vidal-balielo-jr-1250655.jpg");
+}
+
+
+header {
+position: absolute;
+bottom: 0;
+left: 0;
+z-index: 900;
+width: 100%;
+}
+
+header label {
+background-color: rgba(255, 255, 255, 0.8);
+border-radius: 50%;
+width: 15px;
+height: 15px;
+margin: 20px 10px;
+}
+
+nav {
+position: absolute;
+top: 50%;
+margin-top: -49px;
+z-index: 900;
+width: 100%;
+}
+
+nav label {
+font-size: 20px;
+}
+
+header label:hover {
+background: #2e353b;
+}
+
+.prev {
+position: absolute;
+left: 10px;
+}
+
+.next {
+position: absolute;
+right: 10px;
+}
+
+.slide .prev,
+.slide .next {
+opacity: 0;
+}
+
+[id^="slide"]:checked+.slide .prev,
+[id^="slide"]:checked+.slide .next {
+opacity: 1;
+-webkit-transition: all .5s .5s;
+transition: all .5s .5s;
+}
+
+
+.slide h1 {
+opacity: 0;
+-webkit-transform: translateY(100%);
+
+-ms-transform: translateY(100%);
+transform: translateY(100%);
+-webkit-transition: -webkit-transform .5s .5s, opacity .5s;
+transition: transform .5s .5s, opacity .5s;
+}
+
+[id^="slide"]:checked+.slide h1 {
+opacity: 1;
+-webkit-transform: translateY(0);
+-ms-transform: translateY(0);
+transform: translateY(0);
+-webkit-transition: all .5s .5s;
+transition: all .5s .5s;
+}
+
+.imageContainer {
+display: flex;
+flex-direction: column;
+width: 90%;
+height: 100%;
+gap: 1rem;
+padding: 1rem;
+
+
+}
+
+.block {
+height: 40%;
+}
+
+.imgblock {
+border-radius: 5rem;
+}
+
+img {
+border-radius: 1rem;
+}
+button>#skip{
+  background-color:#9DE5EC  ;
+}
+#skip{
+  width: 40%;
+  height: 20%;
+  border-radius: 1rem;
+  background-color: #9DE5EC ;
 }
 
 @media screen and (max-width: 425px) {
@@ -484,7 +807,10 @@ button {
   #text-container {
     top: 1%;
   }
-
+  
+ i{
+  position:absolute;
+ }
   .btn button {
     top: 40px;
     left: 315px;
@@ -499,10 +825,12 @@ button {
     font-size: medium;
   }
 
-  #moreInfo {
+  /* #moreInfo {
     display: none;
-  }
-
+  } */
+ #icon{
+  display: block;
+ }
   .displayN {
     top: 158px;
     left: 21px;
@@ -779,6 +1107,9 @@ img {
   border-radius: 50%;
   touch-action: none;
   user-select: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #item:active {
@@ -973,4 +1304,44 @@ img {
 #curious{
   display:none
 }
+
+.moreInfoalphaBetaphone{
+  position:absolute;
+  width: 85%;
+  top:75%;
+  height: 18%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ left:7%;
+  font-size: 14px;
+  font-weight:100;
+  z-index: 100;
+  
+
+}
+.moreInfoalphaBetaCirclephone{
+     width: 100%;
+    height: 100%;
+    border-radius: 6px;
+    /* background-color: #000000; */
+    border: 1px solid rgba(255, 255, 255, 0.274);
+    box-shadow: 0 0 100px 2px rgb(255 255 255 / 8%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* font-family: 'FontAwesome'; */
+    flex-direction: column;
+    margin-top: 2px;
+    padding: 12px;
+    text-align: justify;
+    color: #b1aeae;
+    gap: 1rem;
+    background: rgba(255, 255, 255, 0);
+    backdrop-filter: blur(50px);
+}
+#skipphone{
+  border-radius: 5px;
+}
+
 }
