--- a/style.css
+++ b/style.css
@@ -1432,7 +1432,7 @@ img {
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  z-index: 2;
+  z-index: 5;
   display: none;
 
 }
@@ -1671,10 +1671,10 @@ img {
   font-weight: 700;
   font-size: 200px;
 }
-
+*/
 #uniqueslider1 {
   display: none;
-} */
+} 
 @media screen and (max-width: 2560px) {
   #slider2{
     top:-10%;
